--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,10 @@
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
+    
+    <script src="https://www.gstatic.com/firebasejs/5.6.0/firebase.js"></script>
+    <!-- <script src="https://www.gstatic.com/firebasejs/5.6.0/firebase.js"></script> -->
+
     <div id="root"></div>
     <!--
       This HTML file is a template.
