last commits from empire

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,9 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
+    <!-- <script src="https://www.gstatic.com/firebasejs/5.7.0/firebase-app.js"></script> -->
+  <!-- /  <script src="https://www.gstatic.com/firebasejs/5.7.0/firebase-firestore.js"></script> -->
+
     <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -26,10 +29,31 @@
       You need to enable JavaScript to run this app.
     </noscript>
     
-    <script src="https://www.gstatic.com/firebasejs/5.6.0/firebase.js"></script>
     <!-- <script src="https://www.gstatic.com/firebasejs/5.6.0/firebase.js"></script> -->
 
     <div id="root"></div>
+
+
+    <script>
+
+
+
+      // Initialize Firebase
+      // var config = {
+      //   apiKey: "AIzaSyAoen1ei96nVtVJseYyVPkvLGmDBdax3v4",
+      //   authDomain: "devo-e8761.firebaseapp.com",
+      //   databaseURL: "https://devo-e8761.firebaseio.com",
+      //   projectId: "devo-e8761",
+      //   storageBucket: "devo-e8761.appspot.com",
+      //   messagingSenderId: "463303271770"
+      // };
+      // firebase.initializeApp(config);
+      // const database = firebase.firestore();
+      // database.settings({timestampsInSnapshots: true})
+
+
+
+    </script>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
